# tsr-2025-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: dofbot_position_controller.yaml  dofbot_trayectory_controller.yaml
demo_pkg/: package.xml  setup.py
demo_pkg/config/: params.yaml  params_2.yaml
demo_pkg/demo_pkg/: MyNodo.py  MyParameters.py  MySubscriptor.py
dofbot_description/: Readme.md
dofbot_description/urdf/: dofbot_basic_pos_controller.xacro  dofbot_basic_position_controller.xacro  dofbot_gazebo_propierties.xacro  dofbot_gazebo_sensor.xacro  dofbot_position_controller.xacro  dofbot_trayectory_controller.xacro  dofbot_urdf.xacro  position_controller_dofbot.xacro  trayectory_controller_dofbot.xacro
dofbotx_ctrl/: package.xml  setup.cfg  setup.py
dofbotx_ctrl/dofbotx_ctrl/: gripper_ctrl.py  test_buzzer.py  test_clamp_block.py  test_ctrl_all.py  test_ctrl_servo.py  test_led_rgb.py  test_left_right.py  test_move_block.py  test_read_servo.py
dofbotx_interfaces/: CMakeLists.txt  package.xml
dofbotx_interfaces/msg/: GripperCmd.msg
driver_interface/: CMakeLists.txt  package.xml
driver_interface/msg/: BuzzerCtrl.msg
driver_pkg/: package.xml  setup.cfg  setup.py
driver_pkg/driver_pkg/: TestDriver.py
examen_bringup/: CMakeLists.txt
examen_bringup/launch/: roberto_pos_controller_scara.launch.py  test_trajectory_controller.launch.py
examen_description/urdf/: lidar_sensor.xacro
launch/: display.xml
my_interface/: CMakeLists.txt  package.xml
my_interface/msg/: MyPosition.msg  TargetPosition.msg
my_interface/srv/: SysInfo.srv
rviz/: dofbot_rviz_config.rviz
sys_info/: package.xml  setup.cfg  setup.py
sys_info/sys_info/: SysInfo.py  sysinfo_lib.py
sysinfo_pkg/: package.xml  setup.cfg  setup.py
sysinfo_pkg/sysinfo_pkg/: sysinfo_client.py  (+1 more)
(+2 files in other folders)
